--- a/client/package.json
+++ b/client/package.json
@@ -41,5 +41,10 @@
   },
   "overrides": {
     "react-is": "^19.0.0-rc-69d4b800-20241021"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint && npm run ts-lint"
+    }
   }
 }
