--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,13 @@
     "prepare": "cd ../ && husky install ./client/.husky"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
+    "@radix-ui/react-checkbox": "^1.1.2",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.2",
     "@tanstack/react-query": "^5.60.5",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
