--- a/server/data/Dockerfile
+++ b/server/data/Dockerfile
@@ -4,6 +4,6 @@ ENV POSTGRES_USER=abderrahim
 ENV POSTGRES_PASSWORD=123456
 ENV POSTGRES_DB=matcha
 
-COPY database.sql /docker-entrypoint-initdb.d/init-db.sql
+COPY ./database.sql /docker-entrypoint-initdb.d/init-db.sql
 
 EXPOSE 5432
