--- a/client/package.json
+++ b/client/package.json
@@ -19,9 +19,11 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
     "@tanstack/react-query": "^5.60.5",
-    "axios": "^1.7.7",
+    "@tanstack/react-query-devtools": "^5.62.3",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "https-browserify": "^1.0.0",
     "install": "^0.13.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.460.0",
@@ -30,8 +32,10 @@
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.53.2",
+    "stream-http": "^3.2.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "url": "^0.11.4",
     "zod": "^3.23.8"
   },
   "devDependencies": {
