--- a/client/package.json
+++ b/client/package.json
@@ -34,10 +34,12 @@
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.53.2",
+    "react-select": "^5.9.0",
     "stream-http": "^3.2.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "url": "^0.11.4",
+    "world-countries": "^5.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
