--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.53.2",
     "react-select": "^5.9.0",
+    "shadcn": "^2.1.8",
     "stream-http": "^3.2.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
