--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.14.4",
     "https-browserify": "^1.0.0",
     "install": "^0.13.0",
     "js-cookie": "^3.0.5",
@@ -33,10 +34,13 @@
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.53.2",
+    "react-select": "^5.9.0",
+    "shadcn": "^2.1.8",
     "stream-http": "^3.2.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "url": "^0.11.4",
+    "world-countries": "^5.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
