--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "react-hook-form": "^7.53.2",
     "react-select": "^5.9.0",
     "shadcn": "^2.1.8",
+    "socket.io-client": "^4.8.1",
     "stream-http": "^3.2.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
