--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
+    "@radix-ui/react-tooltip": "^1.1.6",
     "@react-spring/web": "^9.7.5",
     "@tanstack/react-query": "^5.60.5",
     "@tanstack/react-query-devtools": "^5.62.3",
