--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.14.4",
     "https-browserify": "^1.0.0",
     "install": "^0.13.0",
