--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.53.2",
     "react-select": "^5.9.0",
+    "react-tilt": "^1.0.2",
     "react-tinder-card": "^1.6.4",
     "shadcn": "^2.1.8",
     "socket.io-client": "^4.8.1",
