--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.53.2",
+    "react-intersection-observer": "^9.15.1",
     "react-select": "^5.9.0",
     "react-tilt": "^1.0.2",
     "react-tinder-card": "^1.6.4",
