--- a/client/package.json
+++ b/client/package.json
@@ -18,9 +18,11 @@
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.5",
+    "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slider": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@react-spring/web": "^9.7.5",
@@ -44,7 +46,7 @@
     "react-select": "^5.9.0",
     "react-tilt": "^1.0.2",
     "react-tinder-card": "^1.6.4",
-    "shadcn": "^2.1.8",
+    "shadcn": "^2.3.0",
     "socket.io-client": "^4.8.1",
     "stream-http": "^3.2.0",
     "tailwind-merge": "^2.5.4",
